--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "gatsby": "^1.9.261",
     "gatsby-image": "^1.0.51",
     "gatsby-link": "^1.6.44",
-    "gatsby-plugin-algolia": "^0.0.3",
     "gatsby-plugin-catch-links": "^1.0.22",
     "gatsby-plugin-feed": "^1.3.22",
     "gatsby-plugin-google-analytics": "^1.0.30",
@@ -65,7 +64,9 @@
     "lint": "eslint src/**/*.{js,jsx}",
     "stylelint": "stylelint src/**/*.js",
     "generate-app-icons": "sh ./scripts/generate-app-icons.sh",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy:build": "gatsby build --prefix-paths",
+    "deploy:release": "git-directory-deploy --directory ./public --repo varya --branch gh-pages",
+    "deploy": "npm run deploy:build && npm run deploy:release"
   },
   "devDependencies": {
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
@@ -83,6 +84,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.8.2",
+    "git-directory-deploy": "^1.5.1",
     "json-loader": "^0.5.7",
     "postcss": "^6.0.22",
     "postcss-cli": "^5.0.0",
