--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gatsby"
   ],
   "scripts": {
+    "postinstall": "cd styleguide/ && npm install && cd -",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "devhost": "gatsby develop --host 192.168.0.112",
@@ -63,10 +64,13 @@
     "lint-errors": "eslint src/**/*.{js,jsx} --quiet",
     "lint": "eslint src/**/*.{js,jsx}",
     "stylelint": "stylelint src/**/*.js",
+    "styleguidist:server": "cd styleguide && npm run styleguidist:server",
     "generate-app-icons": "sh ./scripts/generate-app-icons.sh",
     "deploy:build": "gatsby build --prefix-paths",
     "deploy:release": "git-directory-deploy --directory ./public --repo varya --branch gh-pages",
-    "deploy": "npm run deploy:build && npm run deploy:release"
+    "deploy": "npm run deploy:build && npm run deploy:release",
+    "test:visual": "cd styleguide/ && npx styleguidist-visual test --url http://localhost:6060/",
+    "test:visual:approve": "cd styleguide/ && npx styleguidist-visual approve"
   },
   "devDependencies": {
     "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
