--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.5.2",
+    "disqus-react": "^1.0.5",
     "fontfaceobserver": "^2.0.13",
     "gatsby": "^1.9.261",
     "gatsby-image": "^1.0.51",
